form showing on homepage to submit text

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,6 @@
 <form action='' method='POST'>
     {% csrf_token %}
     {{ form.as_p }}
+    <input placeholder="text" type="text" method='POST'>
     <input type="submit" value="submit">
 </form>
