--- a/templates/index.html
+++ b/templates/index.html
@@ -5,3 +5,6 @@
     <input placeholder="text" type="text" method='POST'>
     <input type="submit" value="submit">
 </form>
+<p>
+   {{ form }} 
+</p>
