--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,12 @@
     <input type="submit" value="submit">
 </form>
 <p>
-   {{ form }} 
+   
 </p>
+<ul>
+    {% for item in form %}
+    <li>
+        <p>{{ form }} </p>
+    </li>
+    {% endfor %}
+</ul>
