--- a/templates/history.html
+++ b/templates/history.html
@@ -1,2 +1,8 @@
 <h1>most recent posts:</h1>
-<h3>{{ posts }}</h3>
+<ul>
+    {% for item in posts %}
+    <li>
+        <p>{{ item }} </p>
+    </li>
+    {% endfor %}
+</ul>
