--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,6 @@
 <h3>Create a new post</h3>
-<form action='' method='POST'>
+<form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input placeholder="text" type="text" method='POST'>
     <input type="submit" value="submit">
 </form>
-<p>
-   
-</p>
-<ul>
-    {% for item in form %}
-    <li>
-        <p>{{ form }} </p>
-    </li>
-    {% endfor %}
-</ul>
