--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
     {{ form.as_p }}
     <input type="submit" value="submit">
 </form>
-<p>
-    {{ last_post }}
-</p>
+<pre>
+{{ results }}
+</pre>
