--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
+{% extends 'nav/base.html' %}
+{% block content %}
 <h3>Create a new post</h3>
 <form method="POST">
+
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="submit">
@@ -7,3 +10,4 @@
 <pre>
 {{ results }}
 </pre>
+{% endblock %}
