--- a/templates/nav/base.html
+++ b/templates/nav/base.html
@@ -10,7 +10,8 @@
 <body>
     <header class="page-header">
         <div class="container">
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Home</a>
+                <a href="/history">History</a></h1>
         </div>
     </header>
     <main class="container">
