--- a/templates/history.html
+++ b/templates/history.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>most recent posts:</h1>
 {% for item in posts %}
-<li>{{ item }}</li>
+<li>"{{ item }}" - cow type: {{ item.cowsay_type }}</li>
 
 {% endfor %}
 {% endblock %}
