--- a/templates/nav/base.html
+++ b/templates/nav/base.html
@@ -1,4 +1,13 @@
 {% load static %}
+{# Load the tag library #}
+{% load bootstrap4 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +18,23 @@
 </head>
 <body>
     <header class="page-header">
-        <div class="container">
-            <h1><a href="/">Home</a>
-                <a href="/history">History</a></h1>
-        </div>
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <a class="navbar-brand" href="/">Cowsay</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="/">Go Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/history">History</a>
+                </li>
+            </ul>
+            </div>
+        </nav>
     </header>
     <main class="container">
         <div class="row">
