--- a/templates/history.html
+++ b/templates/history.html
@@ -1,9 +1,11 @@
 {% extends 'nav/base.html' %}
 
 {% block content %}
-<h1>most recent posts:</h1>
+<br>
+<h1 class="text-center">most recent posts:</h1>
+<hr>
 <pre>
-{{results}}
+{{ results }}
 </pre>
 {% for item in posts %}
 <li>"{{ item }}" - cow type: {{ item.cowsay_type }}</li>
